Fixed alignment issues with blueprint centering the container

--- a/stylesheets/main.less
+++ b/stylesheets/main.less
@@ -197,3 +197,6 @@ p.quote:before, p.quote:after {
   content: '"';
 }
 
+.container {
+  margin-left: 20px;
+}
